<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="#8AA9F4">

    <EditText
        android:id="@+id/tname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:paddingStart="40dp"
        android:textColorHint="#474747"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/temail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/temail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="40dp"
        android:textColorHint="#474747"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/trusername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/trusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="40dp"
        android:textColorHint="#474747"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/trpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/trpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="40dp"
        android:textColorHint="#474747"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@color/black"
        android:text="@string/signup"
        android:textColor="#48DADA"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/alreadyAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/alreadyAccount"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRlogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@color/black"
        android:text="@string/login"
        android:textColor="#48DADA"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>